[package]
name = "poly"
version = "0.1.0"
authors = ["Raiko"]
edition = "2018"
repository = "https://github.com/iRaiko/poly"
license = "MIT OR Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.27.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
serde_ini = "0.2"